fixed overflowing picture in O. D. Ames modal

--- a/sycamorecorporation/sycamorecorp.css
+++ b/sycamorecorporation/sycamorecorp.css
@@ -62,6 +62,7 @@ text-decoration: none;
   margin-top:10px;
   margin-bottom: 10px; */
   max-height:300px;
+  max-width:100%;
 }
 .caption{
   text-align:center;
